force-app/main/default/objects/ActivitySettings__c/ActivitySettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Activity Settings</label>
</CustomObject>