force-app/main/default/objects/ActivitySettings__c/fields/High_Activity_Days__c.field-meta.xml
<CustomField>
    <fullName>High_Activity_Days__c</fullName>
    <label>High Activity Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>