force-app/main/default/objects/ActivitySettings__c/fields/Latest_Refresh_Activity_Level_Job_Run__c.field-meta.xml
<CustomField>
    <fullName>Latest_Refresh_Activity_Level_Job_Run__c</fullName>
    <label>Latest Refresh Activity Level Job Run</label>
    <type>DateTime</type>
</CustomField>