force-app/main/default/objects/ActivitySettings__c/fields/Moderate_Activity_Days__c.field-meta.xml
<CustomField>
    <fullName>Moderate_Activity_Days__c</fullName>
    <label>Moderate Activity Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>